update webhook cmds

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,3 +1,65 @@
+# https://beego.me/docs/mvc/controller/config.md
+
+httpaddr = 0.0.0.0
+httpport = 80
+
+# App Config
 appname = webhooks
-httpport = 8080
+httpaddr = 0.0.0.0
+# dev/prod
 runmode = dev
+routercasesensitive = false
+servername = "beego"
+# prod is true
+recoverpanic = false
+copyrequestbody = false
+enablegzip = false
+# 64M
+maxmemory = 1 << 26
+enableerrorsshow = true
+enableerrorsrender = true
+
+# Web config
+autorender = true
+enabledocs = true
+# flashname = "BEEGO_FLASH"
+# flashseperator = "BEEGOFLASH"
+directoryindex = false
+staticdir = download
+StaticExtensionsToGzip = .css, .js
+TemplateLeft="{{"
+TemplateRight="}}"
+viewspath = "views"
+EnableXSRF = false
+XSRFKEY = "xsrf"
+XSRFExpire = 0
+
+# Listen Config
+Graceful=false
+ServerTimeOut=0
+ListenTCP4 = true
+EnableHTTP = true
+EnableHTTPS = false
+EnableAdmin = true
+AdminAddr = "localhost"
+AdminPort = 8088
+EnableFcgi = false
+EnableStdIo = false
+
+# Session Config
+SessionOn = false
+SessionProvider = ""
+SessionName = "sessionID"
+SessionGCMaxLifetime = 3600
+SessionCookieLifeTime = 3600
+SessionAutoSetCookie = true
+
+# Log Config
+AccessLogs = false
+
+[dev]
+httpport = 80
+[prod]
+httpport = 80
+[test]
+httpport = 80
