update cmd and models

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -55,7 +55,23 @@ SessionCookieLifeTime = 3600
 SessionAutoSetCookie = true
 
 # Log Config
-AccessLogs = false
+AccessLogs = true
+
+# DB
+db_type = sqlite3
+
+# mysql
+db_host = localhost
+db_port = 3306
+db_user = root
+db_pass = root
+db_name = webhooks
+
+# sqlite3
+db_path = ./conf/
+db_name = webhooks
+db_type = sqlite3
+
 
 [dev]
 httpport = 80
@@ -63,3 +79,5 @@ httpport = 80
 httpport = 80
 [test]
 httpport = 80
+
+
