update for db and router

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,11 +1,12 @@
 # https://beego.me/docs/mvc/controller/config.md
 
-httpaddr = 0.0.0.0
-httpport = 80
-
 # App Config
 appname = webhooks
 httpaddr = 0.0.0.0
+
+httpaddr = 0.0.0.0
+httpport = 80
+
 # dev/prod
 runmode = dev
 routercasesensitive = false
@@ -20,8 +21,8 @@ enableerrorsshow = true
 enableerrorsrender = true
 
 # Web config
-autorender = true
-enabledocs = true
+autorender = false
+EnableDocs = true
 # flashname = "BEEGO_FLASH"
 # flashseperator = "BEEGOFLASH"
 directoryindex = false
@@ -57,27 +58,39 @@ SessionAutoSetCookie = true
 # Log Config
 AccessLogs = true
 
-# DB
+# DB type: mysql/sqlite3
 db_type = sqlite3
 
-# mysql
+
+[mysql]
+db_alias = default
 db_host = localhost
 db_port = 3306
 db_user = root
-db_pass = root
+db_pwd = root
 db_name = webhooks
+db_charset = utf8
 
-# sqlite3
-db_path = ./conf/
-db_name = webhooks
-db_type = sqlite3
+
+[sqlite3]
+db_alias = "default"
+db_name = sdrms.sqlite3
+
+
+[logs]
+#"emergency", "alert", "critical", "error", "warning", "notice", "info", "debug"
+# 0 ~ 7
+level = 7
+file = webhooks.log
 
 
 [dev]
 httpport = 80
+
+
 [prod]
 httpport = 80
+
+
 [test]
 httpport = 80
-
-
