bugfix: email bug fix

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,5 +1,5 @@
 appname = webhooks
-httpport = 8080
+httpport = 8082
 runmode = dev
 EnableDocs = true
 SessionOn = false
@@ -7,3 +7,11 @@ sessionprovider = memory
 
 webhooks = "conf/webhooks.yaml"
 scripts = "conf/scripts"
+
+SmtpUsername = "robot@80.xyz"
+SmtpPassword = "WRdwrd3e"
+SmtpHost = "smtp.exmail.qq.com"
+SmtpPort = 465
+SmtpSsl = true
+
+DefaultNotifyEmail = "me@xiexianbin.cn"
