bugfix: email bug

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -9,7 +9,7 @@ webhooks = "conf/webhooks.yaml"
 scripts = "conf/scripts"
 
 SmtpUsername = "robot@80.xyz"
-SmtpPassword = "WRdwrd3e"
+SmtpPassword = ""
 SmtpHost = "smtp.exmail.qq.com"
 SmtpPort = 465
 SmtpSsl = true
