update: weekly update

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -9,9 +9,14 @@ webhooks = "conf/webhooks.yaml"
 scripts = "conf/scripts"
 
 SmtpUsername = "robot@80.xyz"
-SmtpPassword = ""
-SmtpHost = "smtp.exmail.qq.com"
+SmtpPassword = "@B94AAwHhe87@Qp"
+SmtpHost = "smtp.qiye.aliyun.com"
 SmtpPort = 465
 SmtpSsl = true
 
 DefaultNotifyEmail = "me@xiexianbin.cn"
+
+AliyunOSSEndpoint = "oss-cn-hangzhou.aliyuncs.com"
+AliyunOSSBucketName = "dev-docs-xiexianbin.cn"
+AliyunOSSAccessKeyID = "LTAI4FwZ3yELG1fXSjwp293R"
+AliyunOSSAccessKeySecret = "w2kPotoFvKSU5WkNIA3ujO1aZAihO5"
